# Rewind-Prototype

./: CMakeLists.txt  README.md
content/: ASSETS.txt
include/animation/: Animation.h  AnimationBlender.h  AnimationConditions.h  AnimationManager.h  AnimationStateMachine.h  BoneVisualizer.h  CameraShake.h
include/audio/: AudioManager.h
include/core/: Engine.h  InputManager.h  QTE.h  QTEConditions.h  Scene.h
include/graphics/: Camera.h  Light.h  LightManager.h  LightProbeManager.h  PostProcessor.h  Renderer.h  ShaderManager.h
include/physics/: CollisionComponent.h  PhysicsWorld.h
include/resources/: GeometryGenerator.h  Mesh.h  Model.h  ModelLoader.h  TextureGenerator.h
include/ui/: FontManager.h  UIButton.h  UIFadeOverlay.h  UIPanel.h  UIText.h  UITexture.h  UIWidget.h
shaders/fxaa/: fxaa_fragment.glsl  fxaa_vertex.glsl
shaders/main/: fragment.glsl  vertex.glsl
shaders/post_processing/: bloom_final_fragment.glsl  bloom_final_vertex.glsl  blur_fragment.glsl  blur_vertex.glsl  bright_pass_fragment.glsl  bright_pass_vertex.glsl  color_grading_fragment.glsl  color_grading_vertex.glsl  depth_of_field_fragment.glsl  depth_of_field_vertex.glsl
shaders/shadows/: point_shadow_fragment.glsl  point_shadow_geometry.glsl  point_shadow_vertex.glsl  rect_shadow_fragment.glsl  rect_shadow_vertex.glsl  shadow_vertex.glsl
shaders/skybox/: brdf_fragment.glsl  brdf_vertex.glsl  equirectangular_to_cubemap_fragment.glsl  equirectangular_to_cubemap_vertex.glsl  irradiance_fragment.glsl  prefilter_fragment.glsl  prefilter_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl
shaders/ssao/: ssao_apply_fragment.glsl
src/animation/: Animation.cpp  AnimationBlender.cpp  AnimationManager.cpp  AnimationStateMachine.cpp  BoneVisualizer.cpp  CameraShake.cpp
src/audio/: AudioManager.cpp
src/core/: Engine.cpp  InputManager.cpp  QTE.cpp  QTEConditions.cpp  Scene.cpp  main.cpp
src/graphics/: Camera.cpp  Light.cpp  LightManager.cpp  LightProbeManager.cpp  PostProcessor.cpp  Renderer.cpp  ShaderManager.cpp
src/physics/: CollisionComponent.cpp  PhysicsWorld.cpp
src/resources/: GeometryGenerator.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  TextureGenerator.cpp
src/ui/: FontManager.cpp  UIButton.cpp  UIFadeOverlay.cpp  UIPanel.cpp  UIText.cpp  UITexture.cpp  UIWidget.cpp
